# agent-neo-bank

./: .gitignore  .mcp.json  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  repomix-output.txt  vite.config.ts
.claude/: CLAUDE.md
.github/: PULL_REQUEST_TEMPLATE.md
code-reviews/: design-review-security.md  design-review-ux.md  design-wave-all-review.md  e2e-bugfixes-ralph-pass1-adversarial-20260228-073840.md  e2e-bugfixes-ralph-pass2-skeptical-20260228-073844.md  e2e-bugfixes-ralph-pass3-correctness-20260228-073847.md  e2e-bugfixes-ralph-r2-pass1-20260228-074106.md  (+24 more)
src/: App.tsx  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: agent-api.json  default.json
src-tauri/src/: config.rs  error.rs  lib.rs  main.rs  test_helpers.rs
src-tauri/src/api/: auth_middleware.rs  mcp_http_server.rs  mcp_router.rs  mcp_server.rs  mcp_tools.rs  mod.rs  rate_limiter.rs  rest_routes.rs  rest_server.rs
src-tauri/src/cli/: commands.rs  executor.rs  mod.rs  parser.rs
src-tauri/src/commands/: agents.rs  approvals.rs  auth.rs  budget.rs  invitation_codes.rs  mod.rs  notifications.rs  provisioning.rs  settings.rs  transactions.rs  wallet.rs
src-tauri/src/core/: agent_registry.rs  approval_manager.rs  auth_service.rs  auto_discovery.rs  event_bus.rs  global_policy.rs  invitation.rs  mod.rs  notification.rs  services.rs  spending_policy.rs  tx_processor.rs  wallet_service.rs
src-tauri/src/db/: mod.rs  models.rs  queries.rs  schema.rs
src-tauri/src/db/migrations/: 001_initial.sql
src-tauri/src/provisioning/: backup.rs  config_writer.rs  content.rs  detection.rs  error.rs  logging.rs  mod.rs  platform.rs  rollback.rs  state.rs  types.rs
src-tauri/src/provisioning/tools/: aider.rs  claude_code.rs  claude_desktop.rs  cline.rs  codex.rs  continue_dev.rs  copilot.rs  cursor.rs  mod.rs  windsurf.rs
src-tauri/src/state/: app_state.rs
src-tauri/tests/: agent_lifecycle.rs  approval_flow.rs  cli_failure_recovery.rs  concurrent_transactions.rs  global_policy.rs  kill_switch.rs  kill_switch_integration.rs  limit_increase.rs  mcp_e2e.rs  mcp_e2e_client.rs  mcp_http_integration.rs  mcp_integration.rs  mock_mode.rs  spending_limits.rs  token_delivery.rs
src-tauri/tests/common/: mod.rs
(+215 files in other folders)
