[package]
name = "tally-agentic-wallet"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }
argon2 = "0.5"
sha2 = "0.10"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
rust_decimal_macros = "1.40.0"

[dev-dependencies]
tempfile = "3"
regex = "1"
tower = { version = "0.5", features = ["util"] }
http = "1"

[lib]
name = "tally_agentic_wallet_lib"
crate-type = ["lib", "cdylib", "staticlib"]
